--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-std = "1.12.0"
-macroquad = "0.4.8"
+bevy = "0.13.2"
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
